# arbol

./: .gitignore  .rustfmt.toml  Cargo.toml  HELP.md  Makefile.toml  README.md  renovate-self-hosted.js
.github/: renovate.json
.github/workflows/: CI.yml  release.yml  renovate.yml
src/: error.rs  fs.rs  lib.rs  query.rs  test_crate_roots.rs  test_dump_json.rs  test_fs_collect.rs  test_query_exec.rs  types.rs  workspace.rs
tests/: cli.rs
