[package]
authors = ["João M. Martins <contact@jmartins.dev>"]
description = "Tree-sitter rust AST query tool"
edition = "2024"
license = "MIT"
name = "arbol"
publish = true
version = "0.1.0"
repository = "https://github.com/joaommartins/arbol"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap-markdown = "0.1"
ignore = "0.4"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tree-sitter = "0.25.9"
tree-sitter-rust = "0.24.0"
visibility = "0.1"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
pretty_assertions = "1"
tempfile = "3"
